# student-marks-analysis

./: .gitignore  README.md
admin-panel/: index.html  (+2 more)
backend/: .gitignore  Dockerfile  Procfile  app.py  pyproject.toml  requirements.in  requirements.txt  run.py  supabase_client.py
backend/app/: __init__.py  extensions.py  supabase_client.py  swagger_config.json
backend/app/config/: settings.py
backend/app/database/: db.py  test_connection.py
backend/app/genai/: sys_prompts.py
backend/app/models/: api_keys.py  mappings.py  tables.py
backend/app/routes/: api_keys.py  health.py  mappings.py  pdf.py  stats.py  students.py  tables.py
backend/app/services/: api_keys_service.py  mappings_service.py  pdf_service.py  schema_service.py  stats_service.py  students_services.py  tables_service.py
backend/app/utils/: dataframe.py  llm.py  tables.py  text.py
backend/migrations/: env.py
backend/migrations/versions/: 16526ca7bcf9_init.py  39b03a529b19_add_api_keys.py  6790c3fb56cc_init_migration.py  c0e77b1c2a9b_initial_migration.py  c2874dabc614_add_mappings_table.py
pdf-reader/: .gitignore  convert_df.ipynb  convert_pdf.ipynb  deliberation_postprocess.csv  push_supabase.ipynb  pyproject.toml  requirements.txt  students_data.csv
pdf-reader/data/: Deliberation_2024_2025_L2_S3.csv  Deliberation_2024_2025_L2_S3_postprocess.csv  Deliberation_2024_2025_L3_S5.csv  Deliberation_2024_2025_L3_S5_postprocess.csv  deliberation_postprocess.csv  students_data.csv
pdf-reader/scripts/: convert_df.ipynb  convert_pdf.ipynb  engine.py  new_engine.py  push_supabase.ipynb
(+52 files in other folders)
