[project]
name = "student-marks-analysis-backend"
version = "0.1.0"
description = "Backend API for student marks analysis"
requires-python = ">=3.11"
dependencies = [
    "arabic-reshaper",
    "flask",
    "flask-cors",
    "flask-migrate",
    "flask-sqlalchemy",
    "google-genai",
    "gunicorn",
    "pandas",
    "pdfplumber",
    "psycopg2",
    "python-bidi",
    "python-dotenv",
    "sqlalchemy",
    "supabase",
]

[tool.uv]
package = false
